--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     width: 300px;
     height: auto;
 }
+
 .logoNav{
     width: 70px;
     height: auto;
+    /* background-color: rgba(236, 228, 198, 0.454); */
 }
-/* .contenedorVideo{
-    width: 100%;
-    height: auto;
-} */
+.marginBoton{
+    margin-bottom: 180px;
+}
